--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <h2>VisualBasics</h2>
 <title> VisualBasics </title>
+<link rel="icon" type="image/x-icon" href="https://ik.imagekit.io/l7uslhlci/IMG_3400.png">
 <link href='https://fonts.googleapis.com/css?family=ADLaM Display' rel='stylesheet'>
 <style>
 
