Add logo image to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <head>
-<h2>VisualBasics</h2>
+
 <title> VisualBasics </title>
+<img src="https://ik.imagekit.io/l7uslhlci/IMG_3404.png" alt="VBLogo" width="200" height="200">
 <link rel="icon" type="image/png" href="https://ik.imagekit.io/l7uslhlci/IMG_3400.png">
 <link href='https://fonts.googleapis.com/css?family=ADLaM Display' rel='stylesheet'>
 <style>
