Update game links and footer information in index.html
Updated links and added new games to the iframe section. Changed footer text to include email address and updated patch notes.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ a:active {
 	<title></title>
 <iframe src="https://quiz-120.github.io/monkeygg2" name="iframe_a" height="99%" width="99%" title="Iframe Example"></iframe>
 <p><a href="https://quiz-120.github.io/projects/1v1lol" target="iframe_a">1v1.lol</a></p>
+<p><a href="https://quiz-120.github.io/projects/bitlife" target="iframe_a">BitLife</a></p>
 <p><a href="https://dddavit.github.io/subway" target="iframe_a">Subway surfers</a></p>
 <p><a href="https://mathplayground.com" target="iframe_a">Math Playground</a></p>
 <p><a href="https://quiz-120.github.io/monkeygg2" target="iframe_a">MonkeyGG2</a></p>
@@ -48,22 +49,28 @@ a:active {
 <p><a href="https://linerider.com" target="iframe_a">Line Rider</a></p>
 <p><a href="https://www.hoodamath.com/games/ovo.html#gsc.tab=0" target="iframe_a">OVO </a></p>
 <p><a href="https://rocket-soccer-derby.github.io/go/class-29.html" target="iframe_a">Bullet Bros</a></p>
+<p><a href="https://rocket-soccer-derby.github.io/ target="iframe_a">Rocket League</a></p> 
 <p><a href="https://fantastic-succotash-jjpj6rrjp47j2p5rv-8080.app.github.dev/" target="iframe_a">Interstellar (new shuttle)</a></p>
 <p><a href="https://www.hoodamath.com/games/snowrider3d.html#gsc.tab=0" target="iframe_a">Snow Rider 3d</a></p>
+<p><a href="https://quiz-120.github.io/projects/drive-mad/" target="iframe_a">Drive Mad</a></p>
+<p><a href="https://quiz-120.github.io/projects/basketball-stars/" target="iframe_a">BasketBall Stars</a></p>
+<p><a href="https://rocket-soccer-derby.github.io/go/class-414.html/" target="iframe_a">Monster Tracks</a></p>
+<p><a href="https://rocket-soccer-derby.github.io/go/class-406.html/" target="iframe_a">Stickman Hook</a></p>
 
 
-<p>if you want new stuff you should probably email me on my home email</p>
-______________________________________________________________________________________
+<h6>if you want new stuff you should probably email me on my home email (foreignbandss@hotmail.com)</h6>
+______________________________________________________________________________________________
 
 
 <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
 <div class="commonninja_component pid-242cf477-fd6a-46fa-a7bb-2c8f04000c7b"></div>
 
-<p> v5.5 realese </p>
+<p> VisualBasics V1 Realese </p>
 
 <p>Patch notes:
   We're using interstellar now
-  we are sorry that some games are gone lol if you still wanna play them use interstellar 
+  we are sorry that some games are gone lol if you still wanna play them use the proxy
+  quiz-120 will be added soon :)
 </p>
 
   <title>Change your background!</title>
