Fix links for Monster Tracks and Stickman Hook

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ a:active {
 <p><a href="https://www.hoodamath.com/games/snowrider3d.html#gsc.tab=0" target="iframe_a">Snow Rider 3d</a></p>
 <p><a href="https://quiz-120.github.io/projects/drive-mad/" target="iframe_a">Drive Mad</a></p>
 <p><a href="https://quiz-120.github.io/projects/basketball-stars/" target="iframe_a">BasketBall Stars</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-414.html/" target="iframe_a">Monster Tracks</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-406.html/" target="iframe_a">Stickman Hook</a></p>
+<p><a href="https://rocket-soccer-derby.github.io/go/class-414.html" target="iframe_a">Monster Tracks</a></p>
+<p><a href="https://rocket-soccer-derby.github.io/go/class-406.html" target="iframe_a">Stickman Hook</a></p>
 
 
 <h6>if you want new stuff you should probably email me on my home email (foreignbandss@hotmail.com)</h6>
