--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ a:active {
 <p><a href="https://mathplayground.com" target="iframe_a">Math Playground</a></p>
 <p><a href="https://quiz-120.github.io/monkeygg2" target="iframe_a">MonkeyGG2</a></p>
 <p><a href="https://Neal.fun" target="iframe_a">Neal.fun (not working)</a></p>
-<p><a href="https://linerider.com" target="iframe_a">Line Rider</a></p>
+<p><a href="https://super-mario-bros-online.github.io/play/class-450.html" target="iframe_a">Slope</a></p>
 <p><a href="https://www.hoodamath.com/games/ovo.html#gsc.tab=0" target="iframe_a">OVO </a></p>
 <p><a href="https://rocket-soccer-derby.github.io/go/class-29.html" target="iframe_a">Bullet Bros</a></p>
 <p><a href="https://rocket-soccer-derby.github.io/ target="iframe_a">Rocket League</a></p> 
