Fix HTML links and remove duplicate entry

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@ a:active {
 <iframe src="https://quiz-120.github.io/monkeygg2" name="iframe_a" height="99%" width="99%" title="Iframe Example"></iframe>
 <p><a href="https://quiz-120.github.io/projects/1v1lol" target="iframe_a">1v1.lol</a></p>
 <p><a href="https://quiz-120.github.io/projects/bitlife" target="iframe_a">BitLife</a></p>
-<p><a href="https://dddavit.github.io/subway" target="iframe_a">Subway surfers</a></p>
-<p><a href="https://mathplayground.com" target="iframe_a">Math Playground</a></p>
+<p><a href="https://dddavit.github.io/subway" target="iframe_a">Subway surfers</a></p
 <p><a href="https://quiz-120.github.io/monkeygg2" target="iframe_a">MonkeyGG2</a></p>
 <p><a href="https://Neal.fun" target="iframe_a">Neal.fun (not working)</a></p>
 <p><a href="https://super-mario-bros-online.github.io/play/class-450.html" target="iframe_a">Slope</a></p>
