--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@ a:active {
 <p><a href="https://quiz-120.github.io/projects/bitlife" target="iframe_a">BitLife</a></p>
 <p><a href="https://dddavit.github.io/subway" target="iframe_a">Subway surfers</a></p
 <p><a href="https://quiz-120.github.io/monkeygg2" target="iframe_a">MonkeyGG2</a></p>
-<p><a href="https://Neal.fun" target="iframe_a">Neal.fun (not working)</a></p>
 <p><a href="https://super-mario-bros-online.github.io/play/class-450.html" target="iframe_a">Slope</a></p>
 <p><a href="https://www.hoodamath.com/games/ovo.html#gsc.tab=0" target="iframe_a">OVO </a></p>
 <p><a href="https://rocket-soccer-derby.github.io/go/class-29.html" target="iframe_a">Bullet Bros</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/ target="iframe_a">Rocket League</a></p> 
+<p><a href="https://rocket-soccer-derby.github.io/" target="iframe_a">Rocket League</a></p> 
 <p><a href="https://fantastic-succotash-jjpj6rrjp47j2p5rv-8080.app.github.dev/" target="iframe_a">Interstellar (new shuttle)</a></p>
 <p><a href="https://www.hoodamath.com/games/snowrider3d.html#gsc.tab=0" target="iframe_a">Snow Rider 3d</a></p>
 <p><a href="https://quiz-120.github.io/projects/drive-mad/" target="iframe_a">Drive Mad</a></p>
