Add Terms link to index.html
Added a link to the Terms document in the footer.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ ________________________________________________________________________________
   quiz-120 will be added soon :)
 </p>
 
+	<h6><a> href="https://docs.google.com/document/d/1XvLXKfmeRybwyv18f1i1psuzxb4kVVDYOT_XWpYAn2g/edit?tab=t.0" target="iframe_a">Terms</a></h6>
+
   <title>Change your background!</title>
   <p> change you background by going to an image on google, right clicking it and hitting: Copy image adress.
      (Then paste it in the box) </p>
