--- a/index.html
+++ b/index.html
@@ -44,20 +44,19 @@ a:active {
 <p><a href="https://quiz-120.github.io/projects/bitlife" target="iframe_a">BitLife</a></p>
 <p><a href="https://dddavit.github.io/subway" target="iframe_a">Subway surfers</a></p
 <p><a href="https://quiz-120.github.io/monkeygg2" target="iframe_a">MonkeyGG2</a></p>
-<p><a href="https://super-mario-bros-online.github.io/play/class-450.html" target="iframe_a">Slope</a></p>
+<p><a href="https://rocket-soccer-derby.github.io/go/class-450.html" target="iframe_a">Slope</a></p>
 <p><a href="https://www.hoodamath.com/games/ovo.html#gsc.tab=0" target="iframe_a">OVO </a></p>
 <p><a href="https://rocket-soccer-derby.github.io/go/class-29.html" target="iframe_a">Bullet Bros</a></p>
 <p><a href="https://rocket-soccer-derby.github.io/" target="iframe_a">Rocket League</a></p> 
-<p><a href="https://fantastic-succotash-jjpj6rrjp47j2p5rv-8080.app.github.dev/" target="iframe_a">Interstellar (working to fix)</a></p>
+<p><a href="https://tvfrontier-material.github.io/down.png" target="iframe_a">Interstellar (working to fix)</a></p>
 <p><a href="https://www.hoodamath.com/games/snowrider3d.html#gsc.tab=0" target="iframe_a">Snow Rider 3d</a></p>
 <p><a href="https://quiz-120.github.io/projects/drive-mad/" target="iframe_a">Drive Mad</a></p>
 <p><a href="https://quiz-120.github.io/projects/basketball-stars/" target="iframe_a">BasketBall Stars</a></p>
 <p><a href="https://rocket-soccer-derby.github.io/go/class-414.html" target="iframe_a">Monster Tracks</a></p>
 <p><a href="https://rocket-soccer-derby.github.io/go/class-406.html" target="iframe_a">Stickman Hook</a></p>
 <p><a href="https://rocket-soccer-derby.github.io/go/class-280.html" target="iframe_a">Boxrob 1</a></p>
-<p><a href="https://super-mario-bros-online.github.io/go/class-279.html" target="iframe_a">Boxrob 2</a></p>
-<p><a href="https://super-mario-bros-online.github.io/go/class-278.html" target="iframe_a">Boxrob 3</a></p>
-
+<p><a href="https://rocket-soccer-derby.github.io/go/class-437.html" target="iframe_a">Slope 2</a></p>
+<p><a href="https://rocket-soccer-derby.github.io/go/class-800.html" target="iframe_a">Slope (2Player Version</a></p>
 
 <h6>if you want new stuff you should probably email me on my home email (foreignbandss@hotmail.com)</h6>
 ______________________________________________________________________________________________
