--- a/index.html
+++ b/index.html
@@ -40,23 +40,22 @@ a:active {
 </style>
 	<title></title>
 <iframe src="https://quiz-120.github.io/monkeygg2" name="iframe_a" height="99%" width="99%" title="Iframe Example"></iframe>
-<p><a href="https://quiz-120.github.io/projects/1v1lol" target="iframe_a">1v1.lol</a></p>
-<p><a href="https://quiz-120.github.io/projects/bitlife" target="iframe_a">BitLife</a></p>
+<p><a href="https://quiz-120.github.io/projects/1v1lol/game.html" target="iframe_a">1v1.lol</a></p>
+<p><a href="https://quiz-120.github.io/projects/bitlife/game.html" target="iframe_a">BitLife</a></p>
 <p><a href="https://dddavit.github.io/subway" target="iframe_a">Subway surfers</a></p
 <p><a href="https://quiz-120.github.io/monkeygg2" target="iframe_a">MonkeyGG2</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-450.html" target="iframe_a">Slope</a></p>
+<p><a href="https://subjectedu511.github.io/g5/class-450/" target="iframe_a">Slope</a></p>
 <p><a href="https://www.hoodamath.com/games/ovo.html#gsc.tab=0" target="iframe_a">OVO </a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-29.html" target="iframe_a">Bullet Bros</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/" target="iframe_a">Rocket League</a></p> 
+<p><a href="https://subjectedu511.github.io/g50/class-29" target="iframe_a">Bullet Bros</a></p> 
 <p><a href="https://tvfrontier-material.github.io/down.png" target="iframe_a">Interstellar (working to fix)</a></p>
 <p><a href="https://www.hoodamath.com/games/snowrider3d.html#gsc.tab=0" target="iframe_a">Snow Rider 3d</a></p>
-<p><a href="https://quiz-120.github.io/projects/drive-mad/" target="iframe_a">Drive Mad</a></p>
-<p><a href="https://quiz-120.github.io/projects/basketball-stars/" target="iframe_a">BasketBall Stars</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-414.html" target="iframe_a">Monster Tracks</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-406.html" target="iframe_a">Stickman Hook</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-280.html" target="iframe_a">Boxrob 1</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-437.html" target="iframe_a">Slope 2</a></p>
-<p><a href="https://rocket-soccer-derby.github.io/go/class-800.html" target="iframe_a">Slope (2Player Version</a></p>
+<p><a href="https://quiz-120.github.io/projects/drive-mad/game.html" target="iframe_a">Drive Mad</a></p>
+<p><a href="https://quiz-120.github.io/projects/basketball-stars/game.html" target="iframe_a">BasketBall Stars</a></p>
+<p><a href="https://subjectedu511.github.io/g72/class-414/" target="iframe_a">Monster Tracks</a></p>
+<p><a href="https://subjectedu511.github.io/g5/class-406/" target="iframe_a">Stickman Hook</a></p>
+<p><a href="https://subjectedu511.github.io/g177/class-280/" target="iframe_a">Boxrob 1</a></p>
+<p><a href="https://subjectedu511.github.io/g2/class-437/" target="iframe_a">Slope 2</a></p>
+<p><a href="https://subjectedu511.github.io/g97/class-800/" target="iframe_a">Slope (2Player Version)</a></p>
 
 <h6>if you want new stuff you should probably email me on my home email (foreignbandss@hotmail.com)</h6>
 ______________________________________________________________________________________________
