Fix typo in Retro Bowl link target attribute

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ a:active {
 <p><a href="https://subjectedu511.github.io/g177/class-280/" target="iframe_a">Boxrob 1</a></p>
 <p><a href="https://subjectedu511.github.io/g2/class-437/" target="iframe_a">Slope 2</a></p>
 <p><a href="https://subjectedu511.github.io/g97/class-800/" target="iframe_a">Slope (2Player Version)</a></p>
-<p><a href="https://subjectedu511.github.io/g5/class-400/" tartet="iframe_a">Retro Bowl</a></p>
+<p><a href="https://subjectedu511.github.io/g5/class-400/" target="iframe_a">Retro Bowl</a></p>
 
 <h6>if you want new stuff you should probably email me on my home email (foreignbandss@hotmail.com)</h6>
 ______________________________________________________________________________________________
