Replace iframe source with new URL

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:active {
 </style>
 </style>
 	<title></title>
-<iframe src="https://quiz-120.github.io/monkeygg2" name="iframe_a" height="99%" width="99%" title="Iframe Example"></iframe>
+<iframe src="https://tvfrontier-material.github.io/vbxcmt.png" name="iframe_a" height="99%" width="99%" title="Iframe Example"></iframe>
 <p><a href="https://quiz-120.github.io/projects/1v1lol/game.html" target="iframe_a">1v1.lol</a></p>
 <p><a href="https://quiz-120.github.io/projects/bitlife/game.html" target="iframe_a">BitLife</a></p>
 <p><a href="https://dddavit.github.io/subway" target="iframe_a">Subway surfers</a></p
