--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 
 <head>
 
-<title> VisualBasics </title>
-<h2>VisualBasics</h2>
-<link rel="icon" type="image/png" href="https://ik.imagekit.io/l7uslhlci/IMG_3400.png">
-<link href='https://fonts.googleapis.com/css?family=ADLaM Display' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blurred Page Unlock</title>
+    <link rel="stylesheet" href="style.css">
+	<h2>VisualBasics</h2>
 <style>
 
 body {
@@ -60,7 +61,15 @@ a:active {
 
 <h6>if you want new stuff you should probably email me on my home email (foreignbandss@hotmail.com)</h6>
 ______________________________________________________________________________________________
+    <div class="overlay" id="overlay">
+        <div class="prompt-box">
+            <p>Enter the secret word to unblur the page:</p>
+            <input type="text" id="secret-input" placeholder="Secret word">
+            <button onclick="checkText()">Unlock</button>
+        </div>
+    </div>
 
+    <script src="script.js"></script>
 
 <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
 <div class="commonninja_component pid-242cf477-fd6a-46fa-a7bb-2c8f04000c7b"></div>
