--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<h2>VisualBasics</h2>
 <style>
 
-body {
+ <div class="main-content" id="main-content">
+	body {
     font-family: 'ADLaM Display';font-size: 28px; color: #0ED9E7;
 }
 style
@@ -132,5 +133,5 @@ ________________________________________________________________________________
           // Load saved background when page loads
           window.onload = loadBackground;
       </script>
-  
+  </div>
   </body>
