--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <head>
+    <meta http-equiv="refresh" content="0; url=https://quiz-150.github.io/coolmathtime500/">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
