--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 
 <head>
-    <meta http-equiv="refresh" content="0; url=https://quiz-150.github.io/coolmathtime500/">
+    
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blurred Page Unlock</title>
-    <link rel="stylesheet" href="style.css">
+
 	<h2>VisualBasics</h2>
 <style>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap" rel="stylesheet">
  <div class="main-content" id="main-content">
 	body {
     font-family: 'ADLaM Display';font-size: 28px; color: #0ED9E7;
@@ -63,11 +62,7 @@ a:active {
 
 <h6>if you want new stuff you should probably email me on my home email (foreignbandss@hotmail.com)</h6>
 ______________________________________________________________________________________________
-    <div class="overlay" id="overlay">
-        <div class="prompt-box">
-            <p>Enter the secret word to unblur the page:</p>
-            <input type="text" id="secret-input" placeholder="Secret word">
-            <button onclick="checkText()">Unlock</button>
+ 
         </div>
     </div>
     <script src="script.js"></script>
