--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 
 
 	<h2>VisualBasics</h2>
-<style>
-<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap" rel="stylesheet">
- <div class="main-content" id="main-content">
-	body {
-    font-family: 'ADLaM Display';font-size: 28px; color: #0ED9E7;
+
+<style>
+	.adlam-display-regular {
+  font-family: "ADLaM Display", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
-style
+
 a:link {
   color:#0ED9E7
   background-color: transparent;
