Update and rename hi.html to index.html

--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@ ________________________________________________________________________________
 <p> VisualBasics V1 Realese </p>
 
 <p>Patch notes:
-  We're using interstellar now
-  we are sorry that some games are gone lol if you still wanna play them use the proxy
-  quiz-120 will be added soon :)
+ We Are Now Owned By Corvanta
 </p>
 
 	
