--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ ________________________________________________________________________________
 <p> VisualBasics V1 Realese </p>
 
 <p>Patch notes:
- We Are Now Owned By Corvanta
+ We Are Now Owned By Zorvanta <a>href="http://zorvanta.github.io"</a>
 </p>
 
 	
