--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ ________________________________________________________________________________
 <p> VisualBasics V1 Realese </p>
 
 <p>Patch notes:
- We Are Now Owned By Zorvanta <a>href="http://zorvanta.github.io"</a>
-</p>
+ We Are Now Owned By Zorvanta <a href="http://zorvanta.github.io"</a></p>
+
 
 	
   <title>Change your background!</title>
