--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <title>VB</title>
 	<h2>VisualBasics</h2>
+	<!-- Elfsight Website Translator | VB Website Translator -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-e59ff933-9052-455d-919f-329a4fc3cb9a" data-elfsight-app-lazy></div>
+	
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap" rel="stylesheet">
