--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VB | 404</title>
-  <link rel="stylesheet" href="404style.css"> <!-- Link to your CSS file -->
+  <link rel="stylesheet" href="zorvanta.github.io/404style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
   <!-- Your content goes here -->
