--- a/index.html
+++ b/index.html
@@ -136,4 +136,28 @@ ________________________________________________________________________________
           window.onload = loadBackground;
       </script>
   </div>
+ 
+  <!DOCTYPE html>
+
+	  
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Tab</title>
+    <link id="favicon" rel="icon" href="default_favicon.ico">
+</head>
+<body>
+    <h1>Customize VisualBasics</h1>
+    <label for="tabTitle">Tab Title:</label>
+    <input type="text" id="tabTitle" placeholder="Enter new tab title">
+    <br><br>
+    <label for="faviconUrl">Icon URL:</label>
+    <input type="text" id="faviconUrl" placeholder="Enter favicon image URL">
+    <br><br>
+    <button id="applyChanges">Apply Changes</button>
+
+    <script src="script.js"></script>
+</body>
+
+
   </body>
