--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ ________________________________________________________________________________
     <br><br>
     <button id="applyChanges">Apply Changes</button>
 
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 
 
