--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ ________________________________________________________________________________
   
       <h2>Enter Image URL to Change Background</h2>
       <input type="text" id="bgUrl" placeholder="Enter image URL...">
-      <button onclick="changeBackground()">Go</button>
+      <button onclick="changeBackground()">Apply</button>
   
       <script>
           // Function to load background from localStorage
